added header html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="logo" href="">
+                    <picture class="logo__img">
+                        <source srcset="./images/logo-mobile.png" media="(max-width: 600px)">
+                        <img src="./images/logo.png" alt="">
+                    </picture>
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">о дроне</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">преимущества</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">характеристики</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">вопросы</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__info">
+                    <button class="header__bth">купить</button>
+                    <a class="header__phone" href="tel:80505676767">8 (050) 567 67 67</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
