added section top html

--- a/index.html
+++ b/index.html
@@ -42,5 +42,39 @@
             </div>
         </div>
     </header>
+    <section class="page-section top">
+        <div class="container">
+            <div class="top__inner">
+                <h1 class="top__title">Mavic 2 Pro</h1>
+                <img src="./images/mavic.png" alt="">
+                <p class="top__text">
+                    Квадрокоптер Dji Mavic 2 Pro 
+с профессиональной камерой Hasselblad
+                </p>
+                <ul class="top__social-list">
+                    <li class="top__social-item">
+                        <a class="top__social-link" href="#">
+                            <img src="./images/facebook.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="top__social-item">
+                        <a class="top__social-link" href="#">
+                            <img src="./images/youtude.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="top__social-item">
+                        <a class="top__social-link" href="#">
+                            <img src="./images/instagram.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="scroll__btn">
+            <a href="">
+                <img src="./images/arrow-down.svg" alt="">
+            </a>
+        </div>
+    </section>
 </body>
 </html>
