--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -48,8 +50,8 @@
                 <h1 class="top__title">Mavic 2 Pro</h1>
                 <img src="./images/mavic.png" alt="">
                 <p class="top__text">
-                    Квадрокоптер Dji Mavic 2 Pro 
-с профессиональной камерой Hasselblad
+                    Квадрокоптер Dji Mavic 2 Pro
+                    с профессиональной камерой Hasselblad
                 </p>
                 <ul class="top__social-list">
                     <li class="top__social-item">
@@ -76,5 +78,53 @@
             </a>
         </div>
     </section>
+    <section class="page-section products">
+        <div class="container">
+            <h3 class="title products__title">Что такое Mavic 2 Pro?</h3>
+            <div class="products__inner">
+                <div class="products__text">
+                    <p>
+                        Дрон Mavic 2 Pro - это инженерное чудо, идеальное для аэросъемки. Дрон обладает всеми лучшими
+                        технологиями DJI, он преобразит мир аэросъемки.
+                    </p>
+                    <p>
+                        Mavic 2 Pro оснащен совершенно новой камерой Hasselblad L1D-20c. Камера L1D-20c работает по
+                        уникальной технологии Hasselblad Natural Colour Solution (HNCS)5, позволяющей пользователям
+                        делать великолепные снимки с воздуха с разрешением в 20 мегапикселей и потрясающими цветами.
+                    </p>
+                </div>
+                <div class="products__slider-box">
+                    <p class="products__slider-text">Лучшая беспилотная
+                        технология аэросъемки</p>
+                    <div class="products__slider">
+                        <div class="products__slider-item">
+                            <img src="./images/slider/sleder-1.png" alt="" class="products__slider-img">
+                        </div>
+                        <div class="products__slider-item">
+                            <img src="./images/slider/sleder-2.png" alt="" class="products__slider-img">
+                        </div>
+                        <div class="products__slider-item">
+                            <img src="./images/slider/sleder-3.png" alt="" class="products__slider-img">
+                        </div>
+                        <div class="products__slider-item">
+                            <img src="./images/slider/sleder-4.png" alt="" class="products__slider-img">
+                        </div>
+                        <div class="products__slider-item">
+                            <img src="./images/slider/sleder-5.png" alt="" class="products__slider-img">
+                        </div>
+                        <div class="products__slider-item">
+                            <img src="./images/slider/sleder-6.png" alt="" class="products__slider-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll__btn">
+            <a href="">
+                <img src="./images/arrow-down.svg" alt="">
+            </a>
+        </div>
+    </section>
 </body>
+
 </html>
