--- a/index.html
+++ b/index.html
@@ -125,6 +125,75 @@
             </a>
         </div>
     </section>
+    <section class="page-section benefits">
+        <div class="container">
+            <h3 class="title benefits__title">Преимущества</h3>
+            <div class="benefits__items">
+                <div class="benefits__item">
+                    <div class="benefits__num">1</div>
+                    <div class="benefits__img">
+                        <img src="./images/benefits/benefits-1.png" alt="">
+                    </div>
+                    <div class="benefits__info">
+                        <h4 class="benefits__info-title">Интеллектуальные режимы</h4>
+                        <p class="benefits__info-text">
+                            Mavic 2 унаследовал 6 стандартных режимов интеллектуальной съемки
+                            QuickShot:Roket/Dronie/Circle/Helix/Boomerang/Asteroid.
+                        </p>
+                    </div>
+                </div>
+                <div class="benefits__item">
+                    <div class="benefits__num">2</div>
+                    <div class="benefits__img">
+                        <img src="./images/benefits/benefits-2.png" alt="">
+                    </div>
+                    <div class="benefits__info">
+                        <h4 class="benefits__info-title">Active Track 2.0</h4>
+                        <p class="benefits__info-text">
+                            Усовершенствованный режим второго поколения распознаёт и отслеживает объекты ещё точнее,
+                            быстрее и умнее.
+                        </p>
+                    </div>
+                </div>
+                <div class="benefits__item">
+                    <div class="benefits__num">3</div>
+                    <div class="benefits__img">
+                        <img src="./images/benefits/benefits-3.png" alt="">
+                    </div>
+                    <div class="benefits__info">
+                        <h4 class="benefits__info-title">Панорамная съемка</h4>
+                        <p class="benefits__info-text">
+                            Mavic 2 поддерживает 4 режима
+                            панорамной съёмки: сферическая,
+                            180 градусов,
+                            горизонтальная, вертикальная
+                        </p>
+                    </div>
+                </div>
+                <div class="benefits__item">
+                    <div class="benefits__num">4</div>
+                    <div class="benefits__img">
+                        <img src="./images/benefits/benefits-4.png" alt="">
+                    </div>
+                    <div class="benefits__info">
+                        <h4 class="benefits__info-title">Крутая камера!</h4>
+                        <p class="benefits__info-text">
+                            Технология Hyperlapse в четырёх режимах исполнения.
+                            Улучшенный фото режим HDR
+                            Функция HyperLight для съёмки в условиях слабого освещения
+                            4К съёмка
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll__btn">
+            <a href="">
+                <img src="./images/arrow-down.svg" alt="">
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
