added section specifications html

--- a/index.html
+++ b/index.html
@@ -194,6 +194,54 @@
             </a>
         </div>
     </section>
+    <section class="page-section specifications">
+        <div class="container">
+            <h3 class="title specifications__title">Характеристики</h3>
+            <div class="specifications__inner">
+                <div class="specifications__item">
+                    <div class="specifications__box">
+                        <h4 class="specifications__box-title">Dlog-M 10 бит</h4>
+                        <p class="specifications__box-text">
+                            Mavic 2 Pro поддерживает цветовой профиль Dlog-M 10 бит с
+                            более широким динамическим диапазоном, дающим больше возможностей для цветокоррекции.
+                        </p>
+                    </div>
+                    <div class="specifications__box">
+                        <h4 class="specifications__box-title">Камера Hasselblad</h4>
+                        <p class="specifications__box-text">
+                            Камера Hasselblad L1D-20С
+                            известны эргономичным дизайном
+                            и превосходным качеством изображений.
+                        </p>
+                    </div>
+                </div>
+                <div class="specifications__item">
+                    <img src="./images/mavic.png" alt="">
+                </div>
+                <div class="specifications__item">
+                    <div class="specifications__box">
+                        <h4 class="specifications__box-title">Матрица CMOS 1</h4>
+                        <p class="specifications__box-text">
+                            Зона активной работы новой 1-дюймовой матрицы CMOS в четыре раза превышает показатели Mavic
+                            Pro
+                        </p>
+                    </div>
+                    <div class="specifications__box">
+                        <h4 class="specifications__box-title">Видео HDR</h4>
+                        <p class="specifications__box-text">
+                            Благодаря поддержке видео 4K HDR 10 бит, Mavic 2 Pro можно подсоединить к совместимому с HLG
+                            4K ТВ и просматривать запись в полном цветовом спектре
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll__btn">
+            <a href="">
+                <img src="./images/arrow-down.svg" alt="">
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
