--- a/index.html
+++ b/index.html
@@ -242,6 +242,39 @@
             </a>
         </div>
     </section>
+    <section class="page-section questions">
+        <div class="container">
+            <h3 class="title questions__title">Остались вопросы?</h3>
+            <div class="questions__items">
+                <div class="questions__item">
+                    <h4 class="questions__item-title">Какие отличия между Mavic 2 Pro и Mavic 2 Zoom?</h4>
+                    <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача
+                        видеосигнала, полётное время, скорость, уровень</p>
+                </div>
+                <div class="questions__item">
+                    <h4 class="questions__item-title">Чем Mavic 2 лучше Mavic Pro? </h4>
+                    <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача
+                        видеосигнала, полётное время, скорость, уровень шума, обнаружение препятствий в нескольких
+                        направлениях, интеллектуальные функции и уникальная функция Hyperlapse (гиперлапс).</p>
+                </div>
+                <div class="questions__item">
+                    <h4 class="questions__item-title">Можно ли подключить Mavic 2 к очкам DJI Goggles?</h4>
+                    <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача
+                        видеосигнала, полётное время, скорость, уровень</p>
+                </div>
+                <div class="questions__item">
+                    <h4 class="questions__item-title">Является ли Mavic 2 водонепроницаемым?</h4>
+                    <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача
+                        видеосигнала, полётное время, скорость, уровень</p>
+                </div>
+            </div>
+        </div>
+        <div class="scroll__btn">
+            <a href="">
+                <img src="./images/arrow-down.svg" alt="">
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
