added section footer html

--- a/index.html
+++ b/index.html
@@ -335,6 +335,11 @@
             </a>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <p class="footer__copy">&copy; DJI, 2020</p>
+        </div>
+    </footer>
 </body>
 
 </html>
