fixed name html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mavic</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -98,22 +98,22 @@
                         технология аэросъемки</p>
                     <div class="products__slider">
                         <div class="products__slider-item">
-                            <img src="./images/slider/sleder-1.png" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/sleder-2.png" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-2.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/sleder-3.png" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-3.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/sleder-4.png" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-4.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/sleder-5.png" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-5.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/sleder-6.png" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-6.jpg" alt="" class="products__slider-img">
                         </div>
                     </div>
                 </div>
