--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
                             <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/slider-2.jpg" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/slider-3.jpg" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/slider-4.jpg" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/slider-5.jpg" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                         <div class="products__slider-item">
-                            <img src="./images/slider/slider-6.jpg" alt="" class="products__slider-img">
+                            <img src="./images/slider/slider-1.jpg" alt="" class="products__slider-img">
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                 <div class="benefits__item">
                     <div class="benefits__num">1</div>
                     <div class="benefits__img">
-                        <img src="./images/benefits/benefits-1.png" alt="">
+                        <img src="./images/benefits/benefits-1.jpg" alt="">
                     </div>
                     <div class="benefits__info">
                         <h4 class="benefits__info-title">Интеллектуальные режимы</h4>
@@ -145,7 +145,7 @@
                 <div class="benefits__item">
                     <div class="benefits__num">2</div>
                     <div class="benefits__img">
-                        <img src="./images/benefits/benefits-2.png" alt="">
+                        <img src="./images/benefits/benefits-2.jpg" alt="">
                     </div>
                     <div class="benefits__info">
                         <h4 class="benefits__info-title">Active Track 2.0</h4>
@@ -158,7 +158,7 @@
                 <div class="benefits__item">
                     <div class="benefits__num">3</div>
                     <div class="benefits__img">
-                        <img src="./images/benefits/benefits-3.png" alt="">
+                        <img src="./images/benefits/benefits-3.jpg" alt="">
                     </div>
                     <div class="benefits__info">
                         <h4 class="benefits__info-title">Панорамная съемка</h4>
@@ -173,7 +173,7 @@
                 <div class="benefits__item">
                     <div class="benefits__num">4</div>
                     <div class="benefits__img">
-                        <img src="./images/benefits/benefits-4.png" alt="">
+                        <img src="./images/benefits/benefits-4.jpg" alt="">
                     </div>
                     <div class="benefits__info">
                         <h4 class="benefits__info-title">Крутая камера!</h4>
