--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             </div>
         </div>
         <div class="scroll__btn">
-            <a href="">
+            <a href="#products">
                 <img src="./images/arrow-down.svg" alt="">
             </a>
         </div>
     </section>
-    <section class="page-section products">
+    <section id="products" class="page-section products">
         <div class="container">
             <h3 class="title products__title">Что такое Mavic 2 Pro?</h3>
             <div class="products__inner">
@@ -120,12 +120,12 @@
             </div>
         </div>
         <div class="scroll__btn">
-            <a href="">
+            <a href="#benefits">
                 <img src="./images/arrow-down.svg" alt="">
             </a>
         </div>
     </section>
-    <section class="page-section benefits">
+    <section id="benefits" class="page-section benefits">
         <div class="container">
             <h3 class="title benefits__title">Преимущества</h3>
             <div class="benefits__items">
@@ -189,12 +189,12 @@
             </div>
         </div>
         <div class="scroll__btn">
-            <a href="">
+            <a href="#specifications">
                 <img src="./images/arrow-down.svg" alt="">
             </a>
         </div>
     </section>
-    <section class="page-section specifications">
+    <section id="specifications" class="page-section specifications">
         <div class="container">
             <h3 class="title specifications__title">Характеристики</h3>
             <div class="specifications__inner">
@@ -237,12 +237,12 @@
             </div>
         </div>
         <div class="scroll__btn">
-            <a href="">
+            <a href="#questions">
                 <img src="./images/arrow-down.svg" alt="">
             </a>
         </div>
     </section>
-    <section class="page-section questions">
+    <section id="questions" class="page-section questions">
         <div class="container">
             <h3 class="title questions__title">Остались вопросы?</h3>
             <div class="questions__items">
@@ -270,12 +270,12 @@
             </div>
         </div>
         <div class="scroll__btn">
-            <a href="">
+            <a href="#contacts">
                 <img src="./images/arrow-down.svg" alt="">
             </a>
         </div>
     </section>
-    <section class="page-section contacts">
+    <section id="contacts" class="page-section contacts">
         <div class="container">
             <h3 class="title contacts__title"></h3>
             <div class="contacts__inner">
@@ -328,11 +328,6 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="scroll__btn">
-            <a href="">
-                <img src="./images/arrow-down.svg" alt="">
-            </a>
         </div>
     </section>
     <footer class="footer">
