--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="container">
                 <h3 class="title benefits__title">Преимущества</h3>
                 <div class="benefits__items">
-                    <div class="benefits__item benefits__item-1">
+                    <div class="benefits__item">
                         <div class="benefits__num">1</div>
                         <div class="benefits__img">
                             <img src="./images/benefits/benefits-1.jpg" alt="">
@@ -164,7 +164,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="benefits__item benefits__item-3">
+                    <div class="benefits__item">
                         <div class="benefits__num">3</div>
                         <div class="benefits__img">
                             <img src="./images/benefits/benefits-3.jpg" alt="">
