added style stction specifications

--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
                 <h3 class="title specifications__title">Характеристики</h3>
                 <div class="specifications__inner">
                     <div class="specifications__item">
-                        <div class="specifications__box">
+                        <div class="specifications__box specifications__box-1">
                             <h4 class="specifications__box-title">Dlog-M 10 бит</h4>
                             <p class="specifications__box-text">
                                 Mavic 2 Pro поддерживает цветовой профиль Dlog-M 10 бит с
                                 более широким динамическим диапазоном, дающим больше возможностей для цветокоррекции.
                             </p>
                         </div>
-                        <div class="specifications__box">
+                        <div class="specifications__box specifications__box-2">
                             <h4 class="specifications__box-title">Камера Hasselblad</h4>
                             <p class="specifications__box-text">
                                 Камера Hasselblad L1D-20С
@@ -230,7 +230,7 @@
                         <img src="./images/mavic.png" alt="">
                     </div>
                     <div class="specifications__item">
-                        <div class="specifications__box">
+                        <div class="specifications__box specifications__box-3">
                             <h4 class="specifications__box-title">Матрица CMOS 1</h4>
                             <p class="specifications__box-text">
                                 Зона активной работы новой 1-дюймовой матрицы CMOS в четыре раза превышает показатели
@@ -238,7 +238,7 @@
                                 Pro
                             </p>
                         </div>
-                        <div class="specifications__box">
+                        <div class="specifications__box specifications__box-4">
                             <h4 class="specifications__box-title">Видео HDR</h4>
                             <p class="specifications__box-text">
                                 Благодаря поддержке видео 4K HDR 10 бит, Mavic 2 Pro можно подсоединить к совместимому с
