added style for sections questions

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача
                             видеосигнала, полётное время, скорость, уровень</p>
                     </div>
-                    <div class="questions__item">
+                    <div class="questions__item questions__item--active">
                         <h4 class="questions__item-title">Чем Mavic 2 лучше Mavic Pro? </h4>
                         <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача
                             видеосигнала, полётное время, скорость, уровень шума, обнаружение препятствий в нескольких
@@ -339,7 +339,7 @@
                         </li>
                         <li class="contacts__social-item">
                             <a class="contacts__social-link" href="#">
-                                <img src="./images/youtude.svg" alt="">
+                                <img src="./images/youtube.svg" alt="">
                             </a>
                         </li>
                         <li class="contacts__social-item">
