--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mavic</title>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/style.css">
@@ -349,14 +349,15 @@
                         </li>
                     </ul>
                 </div>
+                <footer class="footer">
+                    <div class="container">
+                        <p class="footer__copy">&copy; DJI, 2020</p>
+                    </div>
+                </footer>
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="container">
-            <p class="footer__copy">&copy; DJI, 2020</p>
-        </div>
-    </footer>
+
 
 
 
