--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.css" integrity="sha512-iesDf6JpbvI3x1ZiXH3uF+0uvuAoZlTpDsHscV/8uasSBQYx4n8nJUU1ms43oCiq9KcVDWl3zz0Ij2wt7fRoFQ==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -47,6 +48,7 @@
             </div>
         </div>
     </header>
+    <main id="fullpage">
     <section class="page-section top">
         <div class="page-section__wrapper top__wrapper">
             <div class="container">
@@ -358,13 +360,13 @@
         </div>
     </section>
 
-
-
+</main>
 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.js" integrity="sha512-t9WibPXoYetqV8IXnDZyOZMvdDjkFQ+XdIyv5fO9DqSckBl5oG8XG+hCo+bx6LpCFLBmNQs9Lg65OyoAJfg+3Q==" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
